2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test button scaling modes.

2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* NSWindow-test/NSWindow-test.m: Don't implement windowDidUpdate:
	delegate method as it isn't very interesting and spams the log

2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* NSWindow-test: add a window test.

2011-09-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* TextSystem-test: add an experimental test for text system stuff

2011-09-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test that
	[NSGraphicsContext saveGraphicsState] preserves complicated (bezier-path)
	clipping paths. (currently an expected fail.)
	When passing, two copies of the 'g' figure should show up.

2011-09-12  Eric Wasylishen  <ewasylishen@gmail.com>

	* Transparency-test/Transparency-Test.m: Convert the window background
	to NSCalibratedRGBColorSpace so it is possible to change the alpha
	component.

2011-09-12  Eric Wasylishen  <ewasylishen@gmail.com>

	* Transparency-test: Add a test for window opacity and background color alpha

2011-08-29  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test drawing images with strange DPI's

2011-08-29  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test using lockFocus and drawing an image
	into an image

2011-08-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test the edges of an image remain sharp when
	it's scaled up a lot (20x).

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test NSDrawNinePartImage with not enough space
	for drawing all of the parts

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test NSDrawNinePartImage in a flipped view

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test NSDrawNinePartImage
